Fix donate buttons on tablet-size

--- a/support.less
+++ b/support.less
@@ -36,6 +36,12 @@ figure {
     margin-left: auto;
     margin-right: auto;
   }
+
+  .buttons a {
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 @media @desktop, @desktop-xl {
@@ -164,7 +170,7 @@ figure {
 .buttons a {
   display:block;
   margin-bottom: 1em;
-  max-width: 400px;
+//  max-width: 400px;
 
 }
 
@@ -222,6 +228,7 @@ h2 {
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  padding-bottom: .6em;
 }
 
 .membership h3,
@@ -243,12 +250,12 @@ h2 {
 .membership a:hover,
 .membership a:visited,
 .membership a:active {
-//  color: @green;
   color: white;
   background-color: @green;
   font-size: 1.2em;
-  padding: .5em;
-  line-height: 3em;
-
-//  border: 1px solid @green;
+  padding: .3em;
+  display: block;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
